--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".activities.MainActivityGame"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,10 +17,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.Activity_Piano">
+            android:name=".activities.PianoActivity">
         </activity>
         <activity
-            android:name=".activities.Activity_Game">
+            android:name=".activities.TilesActivity">
         </activity>
     </application>
 
